[package]
name = "bhook"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Lightweight hook crate with no_std support that works on x86, x86_64, arm and aarch64"
repository = "https://github.com/mcbegamerxx954/bhook"
license = "CC0-1.0"

[dependencies]
clear-cache = {version ="0.1.2", optional = true}
region = { version = "3.0.2", optional = true }

[features]
std = ["dep:region"]
cache_cleaning = ["dep:clear-cache"]
default = ["std", "cache_cleaning"]
